# stocks_research_assisstant

./: README.md  Untitled.ipynb  crew.py  my_tools.py  pyproject.toml  report.md
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  main-checkpoint.py
src/stock_research_assistant/: Modularity.ipynb  Untitled.ipynb  main.py
src/stock_research_assistant/.ipynb_checkpoints/: Modularity-checkpoint.ipynb  api_calling-checkpoint.py  crew-checkpoint.py  main-checkpoint.py  my_tools-checkpoint.py
src/stock_research_assistant/config/.ipynb_checkpoints/: agents-checkpoint.yaml  tasks-checkpoint.yaml
src/stock_research_assistant/tools/: custom_tool.py
